--- a/Criston Autodesk Assignment.ipynb
+++ b/Criston Autodesk Assignment.ipynb
@@ -138,12 +138,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "db0e639a",
+   "cell_type": "markdown",
+   "id": "ff038fdb",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "One aspect which I was not sure how to handle was the source path. I assumed it was using relative path based on current user, rather than an absolute path."
+   ]
   }
  ],
  "metadata": {
